rangking page & rank id done

--- a/3주차 (24.05.29)/3주차 과제 파일/number_baseball.html
+++ b/3주차 (24.05.29)/3주차 과제 파일/number_baseball.html
@@ -41,6 +41,7 @@
             </div>
         </div>
 
+
     <!-- 게임창 -->
         <div id="main_game_top">
             <button id="baseball_btn">
@@ -60,10 +61,25 @@
     </div>
     <div id="score_board">
     </div>
+    <div id="score_page_back_btn_box">
     <button id="score_page_back_btn">뒤로가기
     </button>
+    </div>
+
+
+
+    <!-- 이름 입력창-->
+    <div id="dialog_box">
+    <div id="dialog_page">
+            <p>기록할 이름을 입력하세요</p>
+            <input id="dialog_text" type="text">
+            <button id="dialog_btn">확인</button>
+        </div>
+    </div>
+    </div>
 
     </main>
+    
     <p id="solve"></p>
     <p id="present"></p>
     <script src="number_baseball.js"></script>
