github event done

--- a/3주차 (24.05.29)/3주차 과제 파일/number_baseball.html
+++ b/3주차 (24.05.29)/3주차 과제 파일/number_baseball.html
@@ -36,9 +36,24 @@
                 <span></span>
                 <img id="right_icon_img" src="image/main_page_right_icon.png">
             </div>
-
-            <div id="main_page_menu">
+            <div id="main_page_menu"></div>
+            <div id="main_page_ad">
+                <div id="main_page_ad_box">
+                    <div id="main_page_ad_text_box">
+                    <P id="main_page_ad_text">내 코딩 점수</P>
+                    <P id="main_page_ad_text_github">GitHub</P>
+                    </div>
+                    <span></span>
+                    <img id="right_icon_img" src="image/main_page_right_icon.png">
+                </div>
+                <div id="main_page_line"></div>
+                <div id="main_page_coding_text_box">
+                    <div>개발현황</div>
+                    <div id="main_page_coding_text">잔디깔기</div>
+                    <div>커밋횟수</div>
+                </div>
             </div>
+
         </div>
 
 
