puzzle logic done

--- a/4주차 (24.06.06)/4주차 과제/main.html
+++ b/4주차 (24.06.06)/4주차 과제/main.html
@@ -8,14 +8,16 @@
 </head>
 <body>
     <main id ="main_book_container">
+
+        <div id="main_book_cover_back_container">
+        </div>
         <div id="main_book_cover_container" onclick="openPage(event)">
         </div>
-
         <div id="main_book_content_container">
         </div>
-
     </main>
     <script src="main.js"></script>
+
 
     
 </body>
