page move function

--- a/4주차 (24.06.06)/4주차 과제/main.html
+++ b/4주차 (24.06.06)/4주차 과제/main.html
@@ -15,7 +15,11 @@
         </div>
         <div id="main_book_content_container">
         </div>
+        <div id="next_page_line" onclick="nextPageEvent()">
+        </div>
     </main>
+
+
     <script src="main.js"></script>
 
 
