aside down except done

--- a/5주차 (24.06.12)/5주차 파일/instargram_clone.html
+++ b/5주차 (24.06.12)/5주차 파일/instargram_clone.html
@@ -8,10 +8,9 @@
 </head>
 <body>
     <aside id="funciton_aside"></aside>
-    <aside id="friend_aside">3</aside>
-    <header id="story_header">4</header>
-    <main id="posting_main">5</main>
-    <footer id="funciton_footer">6</footer>
+    <header id="story_header"></header>
+    <main id="posting_main"></main>
+    <footer id="funciton_footer"></footer>
     <script src="make_tag.js"></script>
 </body>
 </html>
