post aside done

--- a/5주차 (24.06.12)/5주차 과제/week5_report/main.html
+++ b/5주차 (24.06.12)/5주차 과제/week5_report/main.html
@@ -13,5 +13,7 @@
         <a class="btn_shape"href="/week3_report/number_baseball.html">3주차</a>
         <a class="btn_shape" href="/week4_report/main.html">4주차</a>
     </main>
+    <img style="width :300px" src="/week5_report/img.jpg">
+    <div style="text-align: center;">왜용?????</div>
 </body>
 </html>
