--- a/5주차 (24.06.12)/5주차 파일/instargram_clone.html
+++ b/5주차 (24.06.12)/5주차 파일/instargram_clone.html
@@ -9,7 +9,8 @@
 <body>
     <aside id="funciton_aside"></aside>
     <header id="story_header"></header>
-    <main id="posting_main"></main>
+    <main id="posting_main">
+    </main>
     <footer id="funciton_footer"></footer>
     <script src="make_tag.js"></script>
 </body>
