--- a/5주차 (24.06.12)/5주차 파일/week5_report/instargram_clone.html
+++ b/5주차 (24.06.12)/5주차 파일/week5_report/instargram_clone.html
@@ -12,6 +12,6 @@
     <main id="posting_main">
     </main>
     <footer id="funciton_footer"></footer>
-    <script src="instargram.js"></script>
+    <script src="make_tag.js"></script>
 </body>
 </html>
