--- a/5주차 (24.06.12)/5주차 과제/week5_report/main.html
+++ b/5주차 (24.06.12)/5주차 과제/week5_report/main.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <aside id="funciton_aside"></aside>
-    <header id="story_header"></header>
+    <header id="story_header">
+        <!-- <div id="scroll_container">
+        </div> -->
+    </header>
     <main id="posting_main">
     </main>
     <footer id="funciton_footer"></footer>
