post effect done

--- a/5주차 (24.06.12)/5주차 과제/week5_report/main.html
+++ b/5주차 (24.06.12)/5주차 과제/week5_report/main.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instargram</title>
     <link rel="stylesheet" type="text/css" href="instargram.css">
+    <link rel="icon" href="img/domain_icon.png">
 </head>
 <body>
-    <aside id="funciton_aside"></aside>
-    <header id="story_header">
-        <!-- <div id="scroll_container">
-        </div> -->
-    </header>
-    <main id="posting_main">
-    </main>
+    <div id="page_container">
+        <aside id="funciton_aside"></aside>
+        <header id="story_header"></header>
+        <main id="posting_main">
+        </main>
+    </div>
     <footer id="funciton_footer"></footer>
     <script src="instargram.js"></script>
 </body>
