--- a/7주차(24.07.03)/ROOT/html/index.html
+++ b/7주차(24.07.03)/ROOT/html/index.html
@@ -12,7 +12,7 @@
       <aside id="funciton_aside"></aside>
       <header id="story_header"></header>
       <main id="posting_main"></main>
-      <aside id="category_aside"></aside>
+      <!-- <aside id="category_aside"></aside> -->
     </div>
     <footer id="funciton_footer"></footer>
     <script src="../js/instargram.js"></script>
