--- a/7주차(24.07.03)/ROOT/html/login.html
+++ b/7주차(24.07.03)/ROOT/html/login.html
@@ -8,23 +8,8 @@
     <link rel="icon" href="../image/instargram/domain_icon.png" />
   </head>
   <body>
-    <div id="login_container">
-      <img id="logo" src="../image/instargram/aside/instar_text_logo.png" />
-      <div class="placehorder_parent">
-        <p id="placehorder_id" class="placehorder"></p>
-        <input id="login_id" class="login_box" autocomplete="off" />
-      </div>
-      <div class="placehorder_parent">
-        <p id="placehorder_pw" class="placehorder"></p>
-        <input
-          id="login_pw"
-          class="login_box"
-          type="password"
-          autocomplete="off" />
-      </div>
-      <button id="login_btn"></button>
-      <button id="find_btn"></button>
-    </div>
+    <div id="login_container"></div>
+    <div id="find_container"></div>
     <script src="../js/login_page.js"></script>
   </body>
 </html>
