--- a/7주차(24.07.03)/ROOT/html/login.html
+++ b/7주차(24.07.03)/ROOT/html/login.html
@@ -8,8 +8,11 @@
     <link rel="icon" href="../image/instargram/domain_icon.png" />
   </head>
   <body>
+    <div id="join_container"></div>
     <div id="login_container"></div>
     <div id="find_container"></div>
     <script src="../js/login_page.js"></script>
+    <script src="../js/find_page.js"></script>
+    <script src="../js/join_page.js"></script>
   </body>
 </html>
