feat : 유튜브 비디오

--- a/심화/1주차 (24.08.09)/1주차 과제/ROOT/index.html
+++ b/심화/1주차 (24.08.09)/1주차 과제/ROOT/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YouTube</title>
     <link rel="icon" href="image/png/header.youtube_icon.png" />
-    <link rel="stylesheet" type="text/css" href="yotube_clone.css" />
-    <link rel="stylesheet" type="text/css" href="youtube_font.css" />
+    <link rel="stylesheet" type="text/css" href="./component/reset.css" />
+    <link rel="stylesheet" type="text/css" href="./component/video/video.css" />
+    <link rel="stylesheet" type="text/css" href="./domain/main/main.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./component/video/video_title/video_title.css" />
   </head>
   <body>
     <div id="root"></div>
