--- a/심화/1주차 (24.08.09)/1주차 과제/ROOT/index.html
+++ b/심화/1주차 (24.08.09)/1주차 과제/ROOT/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="./component/reset.css" />
     <link rel="stylesheet" type="text/css" href="./component/video/video.css" />
     <link rel="stylesheet" type="text/css" href="./domain/main/main.css" />
+    <link rel="stylesheet" type="text/css" href="./domain/aside/aside.css" />
+    <link rel="stylesheet" type="text/css" href="./component/icon/icon.css" />
     <link
       rel="stylesheet"
       type="text/css"
