--- a/심화/1주차 (24.08.09)/1주차 과제/ROOT/index.html
+++ b/심화/1주차 (24.08.09)/1주차 과제/ROOT/index.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YouTube</title>
-    <link rel="icon" href="image/png/header.youtube_icon.png" />
-    <link rel="stylesheet" type="text/css" href="./component/reset.css" />
-    <link rel="stylesheet" type="text/css" href="./component/video/video.css" />
-    <link rel="stylesheet" type="text/css" href="./domain/main/main.css" />
-    <link rel="stylesheet" type="text/css" href="./domain/aside/aside.css" />
-    <link rel="stylesheet" type="text/css" href="./component/icon/icon.css" />
+    <!-- <link rel="icon" href="image/png/header.youtube_icon.png" /> -->
     <link
       rel="stylesheet"
       type="text/css"
-      href="./component/video/video_title/video_title.css" />
+      href="./common/common.css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="./component/main/main.css" />
+    <link rel="stylesheet" type="text/css" href="./component/aside/aside.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./component/aside/aside_icon/icon_text/icon_text.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./component/aside/aside_icon/icon.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./component/main/video/video.css" />
   </head>
   <body>
     <div id="root"></div>
